samples/_failures_safe/1761402302_ccaf8a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4323e439.c: In function ‘main’:
./samples/SAFE/__tmp_4323e439.c:148: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_4323e439.c:147:5: error: expected declaration or statement at end of input
  147 |     while
      |     ^~~~~
